I fucking hate proxies